fix sidenav on mobile

--- a/src/components/navigation/side-nav.module.css
+++ b/src/components/navigation/side-nav.module.css
@@ -5,7 +5,9 @@
   top: 64px; /* Below Mobile Header */
   left: 0;
   width: 100%;
-  height: calc(100vh - 64px); /* Flow to bottom of screen */
+  bottom: 0;
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
   transform: translateY(-110%);
   visibility: hidden;
   z-index: 1050;
@@ -238,7 +240,6 @@
 @media (min-width: 767px) {
   .sideNav {
     position: sticky;
-    top: 0;
     width: 240px;
     height: 100vh;
     max-height: none; /* Reset mobile-first constraint */
